@@ -144,14 +144,14 @@ div.Section1 {
     XML..</em> from GME and choose your XML model</span></p>
   <p><span style='COLOR:black'>The PICML paradigm is designed for the <a href="http://www.omg.org/cgi-bin/doc?ptc/2003-07-08">OMG
     Deployment &amp; Configuration (D&amp;C) specification (ptc/2003-07-08)</a>, so the modeling process
-    is straightforward if you are familiar with the specification. Please see the <a href="../../../releasenotes/dance.html">DAnCE
+    is straightforward if you are familiar with the specification. Please see the <a href="../../../docs/releasenotes/dance.html">DAnCE
     project</a> for more
     information.&nbsp;For those who hate specification (including me, :-)), an <a href="http://www.cs.wustl.edu/%7Eschmidt/PDF/DAnCE.pdf">overview
-    of D&amp;C</a> and as well as a <a href="http://www.cs.wustl.edu/%7Eschmidt/OMG-CCM-Tutorial.ppt">tutorial of D&amp;C
+    of D&amp;C</a> and as well as a <a href="../../../docs/OMG-CCM-Tutorial.pptx">tutorial of D&amp;C
     and CCM</a> can help to reduce the learning curve. In addition, it is
     also helpful to read through documentation which originally came from the TAO's Developer's Guide 1.4a (CIAO
     and CCM) which thoroughly describes the various descriptors required for a
-    component (*.iad, *.ccd, *.cid, etc). This chapter is available <a href="../../../CIAO.pdf">here.</a></span></p>
+    component (*.iad, *.ccd, *.cid, etc). This chapter is available <a href="../../../docs/CIAO.pdf">here.</a></span></p>
   <h3><span style='COLOR:black'>Table of Contents</span></h3>
   <ul type="disc">
     <li style='COLOR:black;'> <a href="#1">ImplementationArtifacts</a>
